# erofs-utils

./: toolchain-cygwin.cmake
.github/workflows/: main.yml  windows-build-msys2.yml
extract/: CMakeLists.txt  ExtractHelper.cpp  ExtractOperation.cpp  erofs_extract.def  erofs_extract_dll.cpp  erofs_extract_dll.h  erofs_extract_impl.cpp  version.map
extract/include/: ExtractCommon.h  ExtractHelper.h  ExtractOperation.h  Utils.h  erofs_extract_dll.h  erofs_extract_impl.h
extract/src/: main.cpp
lib/: inode.c  xattr.c
mkfs/: main.c
